kube/base/otel/jaeger.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: jaeger.higiliquidos.deti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger-inmemory-instance-collector-extension
                port:
                  number: 16686
